--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@types/node": "^17.0.45",
     "@types/react": "^18.0.18",
     "@types/react-dom": "^18.0.6",
+    "bem-css-modules": "^1.4.3",
+    "classnames": "^2.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
