--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "@types/react-dom": "^18.0.6",
     "bem-css-modules": "^1.4.3",
     "classnames": "^2.3.1",
+    "lodash-es": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-modal": "^3.15.1",
     "react-redux": "^8.0.2",
     "react-scripts": "5.0.1",
+    "react-select": "^5.4.0",
     "typescript": "^4.8.2",
     "web-vitals": "^2.1.4"
   },
@@ -48,6 +51,8 @@
     ]
   },
   "devDependencies": {
+    "@types/lodash-es": "^4.17.6",
+    "@types/react-modal": "^3.13.1",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
     "prettier": "^2.7.1",
