--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,8 +27,8 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
     - run: npm ci
-    - run: npm lint:js
-    - run: npm lint:scss"
+    - run: npm run lint:js
+    - run: npm run lint:scss"
     - run: npm test
     - run: npm run build --if-present
 
