--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,7 @@ jobs:
         cache: 'npm'
     - run: npm ci
     - run: npm run lint:js
-    - run: npm run lint:scss"
+    - run: npm run lint:scss
     - run: npm test
     - run: npm run build --if-present
 
